--- a/src/Chat.css
+++ b/src/Chat.css
@@ -11,6 +11,9 @@
   justify-content: space-between;
   padding: 20px;
   border: 1px solid lightgray;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 .chat__channelName {
